examples/test/testpolicy10326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10326
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key27: value34
      key15: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value20
          key40: value46
          key26: value8
      podSelector:
        matchLabels:
          key20: value20
